--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -8,7 +8,8 @@
   position: fixed;
   top: 0;
   background: white;
-  width: calc(100% - 50px);
+  width: 100%; //calc(100% - 50px);
+  z-index: 1000;
 }
 .menu {
   display: none;
@@ -76,4 +77,8 @@
   .navbar-email {
     display: none;
   }
+}
+
+.pointer {
+  cursor: pointer;
 }
